feat: enhance vector search services and update seed data